# spottmee-face-embeddings-worker

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/face_embeddings_worker/: __main__.py  settings.py
src/face_embeddings_worker/core/: face_processor.py
src/face_embeddings_worker/db/: embedding.py  main.py  repository.py
src/face_embeddings_worker/models/: embedding.py
src/face_embeddings_worker/worker/: tasks.py  worker.py
src/spottmee_face_embeddings_worker/: main.py  settings.py
src/spottmee_face_embeddings_worker/core/: face_processor.py
src/spottmee_face_embeddings_worker/db/: connection.py
src/spottmee_face_embeddings_worker/worker/: tasks.py  worker.py
