[project]
name = "spottmee-face-embeddings-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro Stoianov", email = "dmytrostoianov05@gmail.com"}
]
readme = "README.md"
packages = [
    { from = "src", include = "spottmee_face_embeddings_worker" }
]
requires-python = ">=3.12"

dependencies = [
    "insightface",
    "onnxruntime",
    "faiss-cpu",
    "opencv-python",
    "psycopg2-binary",
    "python-dotenv",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spottmee-worker = "spottmee_face_embeddings_worker.main:main"